map created and CPS lat/long plotted

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Scaffold</title>
+    <title>Eric Son Dynamic</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script src="bundle.js"></script>
+    <div class="container-fluid main-container">
+      <script src="bundle.js">
+        
+      </script>
+    </div>
   </body>
 </html>
