--- a/index.html
+++ b/index.html
@@ -6,9 +6,29 @@
   </head>
   <body>
     <div class="container-fluid main-container">
-      <script src="bundle.js">
-        
-      </script>
+      <div class="school-type">
+        <h4>School Type</h4>
+        <input type="checkbox" class="checkbox" value="Neighborhood" checked>
+        <label>Neighborhood</label>
+        <br>
+        <input type="checkbox" class="checkbox" value="Selective" checked>
+        <label>Selective</label>
+        <br>
+        <input type="checkbox" class="checkbox" value="Magnet" checked>
+        <label>Magnet</label>
+        <br>
+        <input type="checkbox" class="checkbox" value="Charter" checked>
+        <label>Charter</label>
+        <br>
+        <input type="checkbox" class="checkbox" value="Career" checked>
+        <label>Career/Military</label>
+
+
+
+      </div>    
+      <script src="https://d3js.org/d3.v4.js"></script>
+      
+      <script src="bundle.js"></script>
     </div>
   </body>
 </html>
