showing ethnicity bar graphs!
literally took me 6 hours

--- a/index.html
+++ b/index.html
@@ -22,13 +22,10 @@
         <br>
         <input type="checkbox" class="checkbox" value="Career" checked>
         <label>Career/Military</label>
-
-
-
       </div>    
       <script src="https://d3js.org/d3.v4.js"></script>
-      
       <script src="bundle.js"></script>
+      <div class='right-sidebar'></div>
     </div>
   </body>
 </html>
