line not plotting

--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
         <br>
         <input type="checkbox" class="checkbox" value="Career" checked>
         <label>Career/Military</label>
+
+        
+          <h4>Enrollment</h4>
+          <div class="col-sm-2"><p id="value-range"></p></div>
+          <div class="col-sm"><div id="slider-range"></div></div>
+        
+
       </div>    
+
       <script src="https://d3js.org/d3.v4.js"></script>
       <script src="bundle.js"></script>
       <div class='right-sidebar'></div>
