--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
       <div>
         <h1>Chicago Public High School Graduation Rates</h1>
         <p>
-          Chicago Public Schools reached record-breaking 5-year graduation rates for the <a href='https://www.cps.edu/press-releases/mayor-lightfoot-and-chicago-public-schools-announce-record-high-graduation-rate/#:~:text=Lightfoot%20and%20Chicago%20Public%20Schools%20(CPS)%20CEO%20Jackson%20announced%20today,academic%20progress%20of%20Latinx%20students.'>2019-2020</a> school year. Despite all schools finishing the academic year in a remote learning format, the school system's graduation rate ended up at 83.5 percent in 2020. CPS also achieved the lowest dropout rate - the percent of students who drop out over a course of a given year - of 5.6 percent, a decrease from 6.0 percent a year before. 
+          Chicago Public Schools reached record-breaking 5-year graduation rates for the <a href='https://www.cps.edu/press-releases/mayor-lightfoot-and-chicago-public-schools-announce-record-high-graduation-rate/#:~:text=Lightfoot%20and%20Chicago%20Public%20Schools%20(CPS)%20CEO%20Jackson%20announced%20today,academic%20progress%20of%20Latinx%20students.' target="_blank">2019-2020</a> school year. Despite all schools finishing the academic year in a remote learning format, the school system's graduation rate ended up at 83.5 percent in 2020. CPS also achieved the lowest dropout rate - the percent of students who drop out over a course of a given year - of 5.6 percent, a decrease from 6.0 percent a year before. 
         </p>
         <p>
           In fact, Chicago’s graduation rate has risen nearly 27 percentage points from 2010 when only 55.8 percent of CPS students earned a diploma. These school metrics have been propelled by an increase in total expenditure (instruction, administration, support services) in the last decade, along with the academic improvements of Hispanic and Black students.
         </p>
         <p>
-          However, Chicago still falls short of meeting <a href='https://nces.ed.gov/programs/coe/indicator_coi.asp'>national</a> and <a href='https://www.illinoisreportcard.com/state.aspx?source=trends&source2=graduationrate&Stateid=IL'>state</a> averages, and the numbers show persistent racial gaps between students. The schools that reported the lowest 5-year graduation rates include several neighborhood schools on the South and West sides that have gone through consolidations or closings, as well as several that have struggled with dwindling enrollment.
+          However, Chicago still falls short of meeting <a href='https://nces.ed.gov/programs/coe/indicator_coi.asp' target="_blank">national</a> and <a href='https://www.illinoisreportcard.com/state.aspx?source=trends&source2=graduationrate&Stateid=IL' target="_blank">state</a> averages, and the numbers show persistent racial gaps between students. The schools that reported the lowest 5-year graduation rates include several neighborhood schools on the South and West sides that have gone through consolidations or closings, as well as several that have struggled with dwindling enrollment.
         </p>
         <p>
           This map shows the graduation rate trends for different public high schools in Chicago. Hovering over each dot will show the school information, graduation rate trends since 2000, and the ethnicity breakdown of each high school.
@@ -47,7 +47,7 @@
       <div class='right-sidebar'></div>
     </div>
     <div class="main-container bottom">
-      <h4>GitHub Repository</h4>
+      <h4><a href="https://ymericson.github.io/cps-grad-dashboard/" target="_blank">GitHub Repository</a></h4>
       <h4>Data Sources</h4>
       <p>Graduation rates from <a href="https://www.cps.edu/about/district-data/metrics/">Chicago Public Schools</a> district data website</p>
       <p>Enrollment and ethnicity counts from <a href="https://www.isbe.net/Pages/Fall-Enrollment-Counts.aspx">Illinois State Board of Education</a></p>
