--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Eric Son Dynamic</title>
+    <title>CPS Graduation Rates</title>
   </head>
   <body>
     <div class="main-container">
