changed github repo link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class='right-sidebar'></div>
     </div>
     <div class="main-container bottom">
-      <h4><a href="https://ymericson.github.io/cps-grad-dashboard/" target="_blank">GitHub Repository</a></h4>
+      <h4><a href="https://github.com/ymericson/cps-hs-dashboard" target="_blank">GitHub Repository</a></h4>
       <h4>Data Sources</h4>
       <p>Graduation rates from <a href="https://www.cps.edu/about/district-data/metrics/">Chicago Public Schools</a> district data website</p>
       <p>Enrollment and ethnicity counts from <a href="https://www.isbe.net/Pages/Fall-Enrollment-Counts.aspx">Illinois State Board of Education</a></p>
